# segmentation-mask-overlay

./: .gitignore  LICENSE  MANIFEST.in  README.md  rebuild.sh  setup.cfg  setup.py
segmentation_mask_overlay/: __init__.py  main.py  utils.py
segmentation_mask_overlay/examples/: cat.py
src/segmentation_mask_overlay/: __init__.py  label_color.py  main.py  utils.py  video.py
tests/: test_overlay.py
