[metadata]
name = segmentation-mask-overlay
version = attr: segmentation_mask_overlay.__VERSION__
author = Artem Lobantsev
author_email = lobantseff@gmail.com
description = Plotting the segmentation masks has never been so exciting!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lobantseff/segmentation-mask-overlay
license = MIT
include_package_data = True
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.7
install_requires =
    matplotlib>=3.4.2
    numpy>=1.20
    opencv-python>=4.5.3
    Pillow>=7.2.0
    flake8

[options.packages.find]
where=src

[flake8]
max-line-length=89
